--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,43 +1,65 @@
-<section class="bienvenidos">
-	<div class="container">	
-		<div id="carIndicators" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carIndicators" data-slide-to="0" class="active"></li>
-		    <li data-target="#carIndicators" data-slide-to="1"></li>
-		    <li data-target="#carIndicators" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner" role="listbox">
-		    <div class="carousel-item active">
-		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="First slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="Second slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="Third slide">
-		    </div>
-		  </div>
-		  <!-- <a class="carousel-control-prev" href="#carIndicators" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Anterior</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carIndicators" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Siguiente</span>
-		  </a> -->
+<section class="cuadro-img">
+	<div class="container">
+		<br>
+		<div class="row">
+			<div class="col-md-8">
+				<div class="texto">
+					<h1>Organiza yá tus reservas</h1>
+					<p>Bienvenido a Chaskiy Qurpa, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<img src="/assets/images/bienvenida.svg" class="img-fluid" alt="bienvenida">
+			</div>
 		</div>
-		<!-- <div class="texto-bienvenido text-center">
-			<p class="h5">Bienvenidos a nuestro estudio</p>
-			<h1 class="display-4 mb-5">Encantados de conocerte</h1>
-			<a href="#" class="btn btn-primary btn-lg">Ponte en contacto</a>
-		</div> -->
+		<br>
 	</div>
 </section>
-<section class="quienes-somos py-3 text-center">
-	<div class="containter">
-		<img src="/assets/images//nosotros.svg" width="181" alt="nosotros" class="img-fluid mx-auto mb-3">
-		<h2 class="h3">¿QUIENES SOMOS?</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, nobis vero! Facere cumque modi libero ullam, consequuntur soluta explicabo fugiat laudantium natus excepturi nihil sequi vitae, suscipit sint cum, enim!</p>
-		<a href="#" class="btn btn-secundary btn-lg">Mas información</a>
+<section class="caracteristicas">
+	<div class="containter mt-2">
+		<div class="row">
+			<div class="col-md-4">
+				<p class="img">
+					<i class="fa fa-bed" aria-hidden="true"></i>
+				</p>
+				<h2>Registra tus habitaciones</h2>
+				<p>Registra tus habitaciones y controla la disponibilidad de estas por fechas</p>
+				<!-- <a href="#" class="btn btn-secundary btn-lg">Mas información</a> -->
+			</div>
+			<div class="col-md-4">
+				<p class="img">
+					<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+				</p>
+				<h2>Correo electrónico</h2>
+				<p>Envia a través de Chaskiy Qurpa proformas o confirmaciones de hospedaje a tus pasajeros para que no pierdan de vista sus reservas</p>
+			</div>
+			<div class="col-md-4">
+				<p class="img">
+					<i class="fa fa-money" aria-hidden="true"></i>
+				</p>
+				<h2>Registra pagos</h2>
+				<p>Registra los pagos de cada reserva para el control de los ingresos monetarios que genera tu hospedaje</p>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="cuadro-img">
+	<div class="container mt-2">
+		<br>
+		<div class="row">
+			<div class="col-md-4">
+				<p class="img">
+					<i class="fa fa-address-book" aria-hidden="true"></i>
+					<i class="fa fa-address-book-o" aria-hidden="true"></i>
+				</p>
+			</div>
+			<div class="col-md-8">
+				<div class="texto">
+					<h1>Regístrate gratis!</h1>
+					<p>Regístrate y obtén un mes de prueba totalmente gratis!</p>
+				</div>
+			</div>
+		</div>
+		<br>
 	</div>
 </section>
