--- a/src/app/adicional/adicional.component.html
+++ b/src/app/adicional/adicional.component.html
@@ -18,31 +18,31 @@
 			      <i class="fa fa-plus" aria-hidden="true"></i>
 			    </button>
 		    </h2>
-			<table class="table table-hover">
-			  <thead>
-			    <tr>
-			      <th>Adicional</th>
-			      <th>Tarifa</th>
-			      <th>Editar/Eliminar</th>
-			    </tr>
-			  </thead>
-			  <tbody>
-			    <tr *ngFor="let add of adds">
-			      <td width="60%">{{add.adicional}}</td>
-			      <td width="20%">{{add.tarifa | currency:'USD':true}}</td>
-			      <td width="20%">
-			      	<div class="btn-group grid-btn" role="group">
-					  <button type="button" (click)="setModi(add)" class="btn btn-primary" data-toggle="modal" data-target="#adicionalModal">
-					  	<i class="fa fa-pencil" aria-hidden="true"></i>
-					  </button>
-					  <button type="button" (click)="setElim(add)" class="btn btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
-					  	<i class="fa fa-trash" aria-hidden="true"></i>
-					  </button>
-					</div>
-			      </td>
-			    </tr>
-			  </tbody>
-			</table>
+				<table class="table table-hover table-responsive">
+				  <thead>
+				    <tr>
+				      <th>Adicional</th>
+				      <th>Tarifa</th>
+				      <th>Editar/Eliminar</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr *ngFor="let add of adds">
+				      <td width="60%">{{add.adicional}}</td>
+				      <td width="20%">{{add.tarifa | currency:'USD':true}}</td>
+				      <td width="20%">
+				      	<div class="btn-group grid-btn" role="group">
+						  <button type="button" (click)="setModi(add)" class="btn btn-primary" data-toggle="modal" data-target="#adicionalModal">
+						  	<i class="fa fa-pencil" aria-hidden="true"></i>
+						  </button>
+						  <button type="button" (click)="setElim(add)" class="btn btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
+						  	<i class="fa fa-trash" aria-hidden="true"></i>
+						  </button>
+						</div>
+				      </td>
+				    </tr>
+				  </tbody>
+				</table>
 		  </div>
 		</div>
 	</div>
