--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,9 @@
                 <a [routerLink]="['/reserva']">Reservas</a>
             </li>
             <li>
+                <a [routerLink]="['/pagos']">Pagos</a>
+            </li>
+            <li>
                 <span style="color: white;">
                 	<i class="fa fa-cog" aria-hidden="true"></i>
                 	Mantenimientos
