--- a/src/app/reserva/reserva.component.html
+++ b/src/app/reserva/reserva.component.html
@@ -469,12 +469,13 @@
           </div>
         </div>
         <div class="form-group">
-    			<table class="table table-hover">
+    			<table class="table table-hover table-responsive">
     			  <thead>
     			    <tr>
     			      <th>Forma de Pago</th>
+    			      <th>Generado por</th>
+                <th>Fecha</th>
     			      <th>Monto</th>
-    			      <th>Usuario</th>
     			      <th>Eliminar</th>
     			    </tr>
     			  </thead>
@@ -483,9 +484,10 @@
                 <td colspan="4" align="center">No se han efectuado pagos</td>
               </tr>
     			    <tr *ngFor="let pago of pagos">
-    			      <td width="35%">{{pago.formaPago}}</td>
-    			      <td width="25%">{{pago.monto | currency:'USD':true}}</td>
-    			      <td width="25%">{{pago.usuario}}</td>
+    			      <td width="20%">{{pago.formaPago}}</td>
+    			      <td width="35%">{{pago.usuario}}</td>
+    			      <td width="15%">{{pago.fecha}}</td>
+    			      <td width="15%">{{pago.monto | currency:'USD':true}}</td>
     			      <td width="15%">
     			      	<div class="btn-group grid-btn" role="group">
       						  <button type="button" (click)="setElimPago(pago)" class="btn btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
