--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -18,7 +18,7 @@
 			      <i class="fa fa-plus" aria-hidden="true"></i>
 			    </button>
 		    </h2>
-				<table class="table table-hover">
+				<table class="table table-hover table-responsive">
 				  <thead>
 				    <tr>
 				      <th>#Habitación</th>
