--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-md-8">
 				<div class="texto">
-					<h1>Organiza yá tus reservas</h1>
+					<h1>Organiza ya tus reservas</h1>
 					<p>Bienvenido a Chaskiy Qurpa, tu sistema de reserva de hospedaje que se adapta a tu negocio.</p>
 				</div>
 			</div>
@@ -23,7 +23,7 @@
 					<i class="fa fa-bed" aria-hidden="true"></i>
 				</p>
 				<h2>Registra tus habitaciones</h2>
-				<p>Registra tus habitaciones y controla la disponibilidad de estas por fechas</p>
+				<p>Registra tus habitaciones y controla la disponibilidad, llegadas, estancias y salidas de tus pasajeros sin perderte ningún detalle</p>
 				<!-- <a href="#" class="btn btn-secundary btn-lg">Mas información</a> -->
 			</div>
 			<div class="col-md-4">
@@ -55,8 +55,8 @@
 			</div>
 			<div class="col-md-8">
 				<div class="texto">
-					<h1>Regístrate gratis!</h1>
-					<p>Regístrate y obtén un mes de prueba totalmente gratis!</p>
+					<h1>Regístrate!</h1>
+					<p>Y obtén un mes de prueba totalmente gratis!</p>
 				</div>
 			</div>
 		</div>
