--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(31, 61, 76, 0.08);
+}
+
 .wrapper{
   margin-top: 4.3rem;
   margin-left: .5rem;
