--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,6 +40,11 @@
                           <button type="submit" [disabled]="loading" class="btn btn-primary">Login</button>
                           <img *ngIf="loading" src="/assets/images/loading.svg" />
                       </div>
+                      <div class="form-group">
+                        <p class="text-info">¿No recuerdas tu contraseña? da click  
+                          <a [routerLink]="['/recupera']">aquí</a>
+                        </p>
+                      </div>
                     </fieldset>
                   </form>
                   <!-- <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
