--- a/src/app/reserva/reserva.component.html
+++ b/src/app/reserva/reserva.component.html
@@ -443,7 +443,7 @@
         <div class="form-group">
           <div class="card-deck mt-2">
             <div class="card text-center">
-              <div class="card-header bg-info">
+              <div class="card-header text-info">
                 <h3>Total</h3>
               </div>
               <div class="card-block">
@@ -451,7 +451,7 @@
               </div>
             </div>
             <div class="card text-center">
-              <div class="card-header bg-success">
+              <div class="card-header text-success">
                 <h3>Pagado</h3>
               </div>
               <div class="card-block">
@@ -459,7 +459,7 @@
               </div>
             </div>
             <div class="card text-center">
-              <div class="card-header bg-warning">
+              <div class="card-header text-warning">
                 <h3>Saldo</h3>
               </div>
               <div class="card-block">
@@ -469,7 +469,7 @@
           </div>
         </div>
         <div class="form-group">
-    			<table class="table table-hover table-responsive">
+    			<table class="table table-striped table-responsive">
     			  <thead>
     			    <tr>
     			      <th>Forma de Pago</th>
@@ -481,16 +481,16 @@
     			  </thead>
     			  <tbody>
               <tr *ngIf="pagos.length==0">
-                <td colspan="4" align="center">No se han efectuado pagos</td>
+                <td colspan="5" align="center">No se han efectuado pagos</td>
               </tr>
     			    <tr *ngFor="let pago of pagos">
     			      <td width="20%">{{pago.formaPago}}</td>
-    			      <td width="35%">{{pago.usuario}}</td>
+    			      <td width="40%">{{pago.usuario}}</td>
     			      <td width="15%">{{pago.fecha}}</td>
     			      <td width="15%">{{pago.monto | currency:'USD':true}}</td>
-    			      <td width="15%">
+    			      <td width="10%" class="text-center">
     			      	<div class="btn-group grid-btn" role="group">
-      						  <button type="button" (click)="setElimPago(pago)" class="btn btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
+      						  <button type="button" (click)="setElimPago(pago)" class="btn btn-sm btn-outline-danger" data-toggle="modal" data-target="#confirmModal">
       						  	<i class="fa fa-trash" aria-hidden="true"></i>
       						  </button>
                   </div>
