--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,6 +76,9 @@
             <li>
                 <a [routerLink]="['/adds']">Adicionales</a>
             </li>
+            <li>
+                <a [routerLink]="['/hospedaje']">Hospedaje</a>
+            </li>
         </ul>
     </div>
     <!-- /#sidebar-wrapper -->
