--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,3 +1,4 @@
+
 html{
 	font-size:15px;
 }
@@ -124,4 +125,12 @@ button.close {
 .navbar-nav .dropdown-menu {
     position: absolute;
     float: none;
+}
+
+.sub {
+  color: #1f3d4c!important;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(31, 61, 76, 0.08);
 }
