--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -3,7 +3,7 @@
       <h2>Cambiar contraseña</h2>
       <div class="card mt-4">
         <div class="card-body">
-          <form name="form" (ngSubmit)="f.form.valid && guardar()" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
+          <form name="form" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" [ngClass]="{ 'was-validated': f.submitted }" novalidate>
               <h4 class="card-subtitle mb-2 text-muted">Anterior</h4>
               <hr class="my-2">
               <div class="form-group">
