--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,7 +42,7 @@
                       </div>
                       <div class="form-group">
                         <p class="text-info">¿No recuerdas tu contraseña? da click  
-                          <a [routerLink]="['/recupera']">aquí</a>
+                          <a [routerLink]="['/generico/']" [queryParams]="{op:'RP'}">aquí</a>
                         </p>
                       </div>
                     </fieldset>
