--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,9 +61,9 @@
             <li>
                 <a [routerLink]="['/reservas']">Reservas</a>
             </li>
-            <li>
+            <!-- <li>
                 <a [routerLink]="['/pagos']">Pagos</a>
-            </li>
+            </li> -->
             <li>
                 <span style="color: white;">
                 	<i class="fa fa-cog" aria-hidden="true"></i>
@@ -75,6 +75,9 @@
             </li>
             <li>
                 <a [routerLink]="['/adicional']">Adicionales</a>
+            </li>
+            <li>
+                <a [routerLink]="['/tarifa']">Tarifas</a>
             </li>
             <li>
                 <a [routerLink]="['/hospedaje']">Hospedaje</a>
